Fix CORS for Vercel Deployment
Co-authored-by: Cursor <cursoragent@cursor.com>