@@ -31,16 +31,7 @@ public class SecurityConfig {
         http
                 .cors(cors -> cors.configurationSource(request -> {
                     org.springframework.web.cors.CorsConfiguration config = new org.springframework.web.cors.CorsConfiguration();
-                    config.setAllowedOrigins(java.util.List.of(
-                            "http://localhost:5173", 
-                            "http://localhost:5174",
-                            "http://192.168.1.7:5173",
-                            "http://192.168.1.7:5174",
-                            "http://192.168.1.43:5174",
-                            "http://10.220.81.40:5174",
-                            "https://pik-n-go.vercel.app",
-                            "https://pikngo.vercel.app"
-                    ));
+                    config.setAllowedOriginPatterns(java.util.Collections.singletonList("*"));
                     config.setAllowedMethods(java.util.List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
                     config.setAllowedHeaders(java.util.List.of("*"));
                     config.setAllowCredentials(true);
